# lens-sop

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  lens-sop.cabal
.github/workflows/: haskell-ci.yml
src/Generics/SOP/: Lens.hs  Prism.hs  Traversal.hs
src/Generics/SOP/Lens/: Computed.hs  Named.hs
